charts/app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: kubetrain
      port:
        number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubetrain
spec:
  selector:
    app: kubetrain
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetrain
  labels:
    app: kubetrain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubetrain
  template:
    metadata:
      labels:
        app: kubetrain
    spec:
      containers:
      - name: kubetrain
        image: xthale/kubetrain:develop-1711109972
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /q/health/live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /q/health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
